tests/ui/specialization/issue-43037.current.stderr
error[E0119]: conflicting implementations of trait `From<_>`
  --> $DIR/issue-43037.rs:19:1
   |
LL | impl<T> From< <A<T> as Z>::Assoc > for T {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<T> From<T> for T;

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
